trying to fix bullet point line spacing

--- a/themes/soho/static/css/poole.css
+++ b/themes/soho/static/css/poole.css
@@ -103,8 +103,8 @@ h4, h5, h6 {
 
 /* Body text */
 p {
-  margin-top: 0;
-  margin-bottom: 1rem;
+  margin-top: 1;
+  margin-bottom: 0rem;
 }
 
 strong {
